--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -2,7 +2,7 @@ global:
   scrape_interval: 15s
 
 scrape_configs:
-  - job_name: 'node'
+  - job_name: node
     static_configs:
       - targets:
-        - '192.168.1.1:9100'
+        - node-exporter:9100
