--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -2,7 +2,16 @@ global:
   scrape_interval: 15s
 
 scrape_configs:
-  - job_name: node
+  - job_name: docker
+    static_configs:
+      - targets:
+        - cadvisor:8080
+        labels:
+          group: docker-container
+
+  - job_name: docker-host
     static_configs:
       - targets:
         - node-exporter:9100
+        labels:
+          group: docker-host
