--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,7 +1,21 @@
 global:
-  scrape_interval: 15s
+  scrape_interval: 5s
 
 scrape_configs:
+  - job_name: prometheus
+    static_configs:
+      - targets:
+        - localhost:9090
+        labels:
+          group: prometheus
+
+  - job_name: grafana
+    static_configs:
+      - targets:
+        - grafana:3000
+        labels:
+          group: prometheus
+
   - job_name: docker
     static_configs:
       - targets:
