--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,18 @@
 version: '3'
 
 services:
+  redis:
+    image: redis:alpine
+    ports:
+      - 6379:6379
+
+  redis-exporter:
+    image: oliver006/redis_exporter
+    depends_on:
+      - redis
+    environment:
+      REDIS_ADDR: redis:6379
+
   rabbitmq:
     image: rabbitmq:management-alpine
     hostname: rabbitmq
@@ -43,6 +55,7 @@ services:
     image: prom/prometheus
     depends_on:
       - rabbitmq-exporter
+      - redis-exporter
       - node-exporter
       - cadvisor
     ports:
