--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -47,6 +47,14 @@ scrape_configs:
   - job_name: nginx
     static_configs:
       - targets:
-        - nginx-exporter:9113
+        - nginx-exporter_1:9113
+        - nginx-exporter_2:9113
         labels:
           group: nginx
+
+  - job_name: haproxy
+    static_configs:
+      - targets:
+        - haproxy-exporter:9101
+        labels:
+          group: haproxy
